--- a/src/components/WarehouseInventoryItem/WarehouseInventoryItem.scss
+++ b/src/components/WarehouseInventoryItem/WarehouseInventoryItem.scss
@@ -29,8 +29,7 @@ p {
 
     &__item-info {
         display: flex;
-        width: 83%;
-        justify-content: space-between;
+        width: 100%;
         align-items: flex-start;
 
         @include mixins.tablet {
@@ -42,10 +41,14 @@ p {
     &__column {
         display: flex;
         flex-direction: column;
-        inline-size: 8rem;
+        width: 100%;
 
         @include mixins.tablet {
             display: contents;
+        }
+        
+        @include mixins.desktop {
+            width: 100%;
         }
     }
 
@@ -74,7 +77,7 @@ p {
         }
 
         @include mixins.desktop {
-            inline-size: 13.5rem;
+            inline-size: 21%;
         }
     }
 
@@ -91,17 +94,26 @@ p {
             margin: 0rem;
             width: 26%
         }
+
+        @include mixins.desktop {
+            width: 26.5%;
+        }
     }
 
     &__status-block {
         margin-bottom: 0.65rem;
         width: 30.5%;
+
+        @include mixins.desktop {
+            width: 29.5%;
+        }
     }
 
     &__status-in-stock {
         @include mixins.status;
         color: variables.$Green;
         background: rgba(21, 132, 99, 0.07);
+        width: 4.1rem;
 
         @include mixins.tablet {
             inline-size: 4.5rem;
@@ -116,6 +128,7 @@ p {
         @include mixins.status;
         color: variables.$Red;
         background: rgba(201, 69, 21, 0.07);
+        width: 5.8rem;
 
         @include mixins.tablet {
             inline-size: 5.8rem;
